Added missing header to README

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+libnet 1.1 tutorial (http://repura.livejournal.com/31673.html) sample code
+
 Each file is named with the tutorial part they appear in, followed by a dot and
 the order they appear.
 
