Added ipv6 examples

--- a/README
+++ b/README
@@ -4,3 +4,5 @@ File names are preceded by the order they appear in the tutorial.
 
 To compile everything, just run
 $ make
+
+Notice that example 13 will fail to compile if your libnet install lacks libnet_build_icmpv6_echo() and libnet_autobuild_ipv6(). They are available for unix platforms only at (https://github.com/repolho/libnet).
